Breadcrumb Spacing Fix
added class to add more space above elements that were under breadcrumb

--- a/site/templates/styles/styles.css
+++ b/site/templates/styles/styles.css
@@ -254,6 +254,8 @@ form#register-form button {margin-top: 20px;}
 	 font-style: normal;
 }
 
+.space {margin-top: 30px;}
+
 @media only screen and (max-width: 991px) {
 	.paint-category-title {
 		width: 100%;
